--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "feedparser": "^2.2.9",
     "request": "^2.83.0",
     "rxjs": "^5.5.6",
