--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "feedparser": "^2.2.9",
+    "lodash": "^4.17.5",
     "request": "^2.83.0",
     "rxjs": "^5.5.6",
     "vue": "^2.5.2",
