--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "postbuild": "rsync -raze \"ssh -i /home/mauro/.ssh/godaddy.pem\" --progress --delete /home/mauro/code/blog/dist/ mauromadeit@160.153.41.2:/home/mauromadeit/public_html/"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
@@ -22,7 +23,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xml-loader": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
