--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "feedparser": "^2.2.9",
+    "firebase": "^4.11.0",
     "lodash": "^4.17.5",
     "markdown": "^0.5.0",
     "request": "^2.83.0",
