--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "request": "^2.83.0",
     "rxjs": "^5.5.6",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.9.1",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.6",
     "vuex": "^3.0.1",
