--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "firebase": "^4.11.0",
     "lodash": "^4.17.5",
     "markdown": "^0.5.0",
-    "mauromadeit-vue-commons": "https://github.com/maurop123/vue-commons.git",
     "request": "^2.83.0",
     "rxjs": "^5.5.6",
     "vue": "^2.5.2",
@@ -65,6 +64,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
+    "mauromadeit-vue-commons": "file:../commons-vue",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
