--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
